# UniversalConverter-AppWeb

./: README.md
.github/workflows/: deploy.yml
deploy/: deploy.sh  nginx-universalconverter.conf
server/: Cargo.toml
server/src/: dispatch.rs  main.rs  office_engine.rs  pdf_engine.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  types.ts
web/src/components/: FileList.tsx  FileUploader.tsx  History.tsx  MergePDF.tsx  MergePromptModal.tsx
